src/main/java/cmm/javacc/zck/CMMParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. CMMParser.java */
package cmm.javacc.zck;
public class CMMParser/*@bgen(jjtree)*/implements CMMParserTreeConstants, CMMParserConstants {/*@bgen(jjtree)*/
  protected JJTCMMParserState jjtree = new JJTCMMParserState();

  final public SimpleNode Sentences() throws ParseException {
                                     /*@bgen(jjtree) Sentences */
  SimpleNode jjtn000 = new SimpleNode(JJTSENTENCES);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Sentence();
      Sentences_();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 0:
        jj_consume_token(0);
        break;
      default:
        jj_la1[0] = jj_gen;
        Empty();
      }
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
   {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  final public void Empty() throws ParseException {
                       /*@bgen(jjtree) Empty */
  SimpleNode jjtn000 = new SimpleNode(JJTEMPTY);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;

    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void Sentence() throws ParseException {
                             /*@bgen(jjtree) Sentence */
  SimpleNode jjtn000 = new SimpleNode(JJTSENTENCE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
      case REAL:
      case CHAR:
      case VOID:
        Type();
        if (jj_2_1(2147483647)) {
          DeclVarExpr();
          LCB();
          Sentences();
          RCB();
          Sentence_();
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case LRB:
          case MUL:
          case ID:
            DeclCommaExpr();
            SEMI();
            Sentence_();
            break;
          default:
            jj_la1[1] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
        break;
      case IF:
        IF();
        LRB();
        CommaExpr();
        RRB();
        Sentence();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ELSE:
          ELSE();
          Sentence();
          Sentence_();
          break;
        default:
          jj_la1[2] = jj_gen;
          Sentence_();
        }
        break;
      case RETURN:
        RETURN();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LRB:
        case ADD:
        case SUB:
        case MUL:
        case BAND:
        case LNT:
        case BNT:
        case DEC:
        case INC:
        case ID:
        case ILT:
        case RLT:
        case CLT:
        case SLT:
          CommaExpr();
          SEMI();
          Sentence_();
          break;
        case SEMI:
          SEMI();
          Sentence_();
          break;
        default:
          jj_la1[3] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      case LCB:
        LCB();
        Sentences();
        RCB();
        Sentence_();
        break;
      case LRB:
      case ADD:
      case SUB:
      case MUL:
      case BAND:
      case LNT:
      case BNT:
      case DEC:
      case INC:
      case ID:
      case ILT:
      case RLT:
      case CLT:
      case SLT:
        CommaExpr();
        SEMI();
        Sentence_();
        break;
      case WHILE:
        WHILE();
        LRB();
        CommaExpr();
        RRB();
        Sentence();
        Sentence_();
        break;
      case BREAK:
        BREAK();
        SEMI();
        Sentence_();
        break;
      case CONTINUE:
        CONTINUE();
        SEMI();
        Sentence_();
        break;
      case SEMI:
        SEMI();
        Sentence_();
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void FuncParamBracketExpr() throws ParseException {
                                                     /*@bgen(jjtree) FuncParamBracketExpr */
  SimpleNode jjtn000 = new SimpleNode(JJTFUNCPARAMBRACKETEXPR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      LRB();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case RRB:
        RRB();
        FuncParamBracketExpr_();
        break;
      case INT:
      case REAL:
      case CHAR:
      case VOID:
        FuncParamCommaExpr();
        RRB();
        FuncParamBracketExpr_();
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void FuncParamCommaExpr() throws ParseException {
                                                 /*@bgen(jjtree) FuncParamCommaExpr */
  SimpleNode jjtn000 = new SimpleNode(JJTFUNCPARAMCOMMAEXPR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      FuncParamExpr();
      FuncParamCommaExpr_();
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void FuncParamExpr() throws ParseException {
                                       /*@bgen(jjtree) FuncParamExpr */
  SimpleNode jjtn000 = new SimpleNode(JJTFUNCPARAMEXPR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Type();
      if (jj_2_2(2147483647)) {
        DeclVarExpr();
        FuncParamExpr_();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LRB:
        case LSB:
        case MUL:
          DeclTypeExpr();
          FuncParamExpr_();
          break;
        default:
          jj_la1[6] = jj_gen;
          FuncParamExpr_();
        }
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void DeclCommaExpr() throws ParseException {
                                       /*@bgen(jjtree) DeclCommaExpr */
  SimpleNode jjtn000 = new SimpleNode(JJTDECLCOMMAEXPR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      DeclExpr();
      DeclCommaExpr_();
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void DeclExpr() throws ParseException {
                             /*@bgen(jjtree) DeclExpr */
  SimpleNode jjtn000 = new SimpleNode(JJTDECLEXPR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      DeclVarExpr();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ASN:
        ASN();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LRB:
        case ADD:
        case SUB:
        case MUL:
        case BAND:
        case LNT:
        case BNT:
        case DEC:
        case INC:
        case ID:
        case ILT:
        case RLT:
        case CLT:
        case SLT:
          AssignExpr();
          DeclExpr_();
          break;
        case LCB:
          LCB();
          CommaExpr();
          RCB();
          DeclExpr_();
          break;
        default:
          jj_la1[7] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[8] = jj_gen;
        DeclExpr_();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void Type() throws ParseException {
                     /*@bgen(jjtree) Type */
  SimpleNode jjtn000 = new SimpleNode(JJTTYPE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
        INT();
        Type_();
        break;
      case REAL:
        REAL();
        Type_();
        break;
      case CHAR:
        CHAR();
        Type_();
        break;
      case VOID:
        VOID();
        Type_();
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void Literal() throws ParseException {
                           /*@bgen(jjtree) Literal */
  SimpleNode jjtn000 = new SimpleNode(JJTLITERAL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ILT:
        ILT();
        Literal_();
        break;
      case RLT:
        RLT();
        Literal_();
        break;
      case CLT:
        CLT();
        Literal_();
        break;
      case SLT:
        SLT();
        Literal_();
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void CommaExpr() throws ParseException {
                               /*@bgen(jjtree) CommaExpr */
  SimpleNode jjtn000 = new SimpleNode(JJTCOMMAEXPR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      AssignExpr();
      CommaExpr_();
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void AssignExpr() throws ParseException {
                                 /*@bgen(jjtree) AssignExpr */
  SimpleNode jjtn000 = new SimpleNode(JJTASSIGNEXPR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      LogicOrExpr();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ASN:
        ASN();
        AssignExpr();
        AssignExpr_();
        break;
      default:
        jj_la1[11] = jj_gen;
        AssignExpr_();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void LogicOrExpr() throws ParseException {
                                   /*@bgen(jjtree) LogicOrExpr */
  SimpleNode jjtn000 = new SimpleNode(JJTLOGICOREXPR);
  boolean jjtc000 = true;
